--- a/.github/workflows/typst.yml
+++ b/.github/workflows/typst.yml
@@ -20,15 +20,15 @@ jobs:
           curl -L https://github.com/typst/typst/releases/download/v0.7.0/typst-x86_64-unknown-linux-musl.tar.xz -o typst.tar.xz
           tar -xvf typst.tar.xz
 
-      # Compile semantics.pdf
+      # Compile ert.pdf
       - name: Compile Document
         run: ./typst-x86_64-unknown-linux-musl/typst compile ert.typ
 
-      # Copy over semantics.pdf and README.md to public directory
+      # Copy over ert.pdf and README.md to public directory
       - name: Build public directory
         run: |
           mkdir public
-          cp semantics.pdf public/
+          cp ert.pdf public/
 
       # Upload GitHub pages artifact
       - uses: actions/upload-pages-artifact@v1
